Replaced xerox with pyperclip

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90cf67e011746d7a07eb8230cef3083",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x12\\xbe\\x00\\x00\\x03\\xfa\\x08\\x02\\x00\\x00\\x00W\\xad\\r\\'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets  #Loads logo\n",
     "file = open(\"images/Logo_for_app_3.png\", \"rb\")\n",
@@ -49,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kwant\n",
     "from math import *\n",
@@ -76,7 +52,7 @@
     "from matplotlib import gridspec\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, Label\n",
     "import ipywidgets as widgets\n",
-    "import xerox\n",
+    "import pyperclip\n",
     "import copy\n",
     "import time\n",
     "\n",
@@ -483,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,54 +1021,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11aa30f048684c2bbc52db2ffa6d18c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(ToggleButtons(description='Angle', description_tooltip='Select the angle between the two…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f22dcc9a36d34684a613faf33d3de4ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Text(value='', description='Enter atoms to be removed:', description_tooltip='Enter the …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1a1e431e1e14bbb9a782697fb029369",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Reset system', style=ButtonStyle(), tooltip='Back to original system with no atoms removed…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(Selection) #displays the initial widget\n",
     "\n",
@@ -1132,52 +1065,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8642ab85fc504aaf8574c3060b4f78c6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=-3.0, description='Min Energy (t)', description_tooltip='Select the lo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e98de9eeb62b44969739870060ad5359",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=62)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6590065934664865b53e3d1b8472ea9a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Copy data', style=ButtonStyle(), tooltip='First column is Energy (t), second is Conductanc…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
     "#Progress adds a progress bar, when the calculate_cond function is called and hides it after the calculation is done\n",
@@ -1206,14 +1096,14 @@
     "            empty_string=\"\\t\".join(dataset_c[0:3])\n",
     "        if i!=0:\n",
     "            empty_string=empty_string+\"\\n\"+\"\\t\".join(dataset_c[int(3*i):int(3*i+3)])\n",
-    "    xerox.copy(\"#Energy (t),Conductance (e\\N{SUPERSCRIPT TWO}/h),DOS\"+\"\\n\"+empty_string)\n",
+    "    pyperclip.copy(\"#Energy (t),Conductance (e\\N{SUPERSCRIPT TWO}/h),DOS\"+\"\\n\"+empty_string)\n",
     "copy_button.on_click(copy_clip)\n",
     "display(copy_button)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,64 +1130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38f67ed45f6c44febd0cea1a5190bb81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatText(value=0.5, description='Energy (t)', description_tooltip='Enter the energy at …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(Single_en_at)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
