--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -52,7 +52,6 @@
     "from matplotlib import gridspec\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual, HBox, Label\n",
     "import ipywidgets as widgets\n",
-    "import xerox\n",
     "import copy\n",
     "import time\n",
     "\n",
@@ -1081,24 +1080,7 @@
     "    fsys=sys2.finalized()\n",
     "    energies, trans, dos = cond_and_dos(Emin,Emax)\n",
     "    progress.layout.visibility=\"hidden\"\n",
-    "display(progress)#copy to clipboard functionality. Creates a button which copies the datasets. The data is organized into columns.\n",
-    "#first column is energy, second is transmission, third is dos. Numbers are all rounded to 4 decimal places.\n",
-    "empty_string=\"\"\n",
-    "copy_button = widgets.Button(description = \"Copy data\",tooltip='Click to copy the Energy, Conductance and DOS array to your clipboard')\n",
-    "def copy_clip(b):\n",
-    "    dataset=np.array([list([format(ints,'.4f') for ints in energies]), list([format(ints,'.4f') for ints in trans]), list([format(ints,'.4f') for ints in dos])]).T.tolist()\n",
-    "    dataset_c=[]\n",
-    "    for i in range(len(dataset)):\n",
-    "        dataset_c.extend(dataset[i])\n",
-    "    empty_string=\"\"\n",
-    "    for i in range(int(len(dataset_c)/3)):\n",
-    "        if i==0:\n",
-    "            empty_string=\"\\t\".join(dataset_c[0:3])\n",
-    "        if i!=0:\n",
-    "            empty_string=empty_string+\"\\n\"+\"\\t\".join(dataset_c[int(3*i):int(3*i+3)])\n",
-    "    xerox.copy(\"#Energy (t),Conductance (e\\N{SUPERSCRIPT TWO}/h),DOS\"+\"\\n\"+empty_string)\n",
-    "copy_button.on_click(copy_clip)\n",
-    "display(copy_button)"
+    "display(progress)
    ]
   },
   {
