--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -1080,7 +1080,7 @@
     "    fsys=sys2.finalized()\n",
     "    energies, trans, dos = cond_and_dos(Emin,Emax)\n",
     "    progress.layout.visibility=\"hidden\"\n",
-    "display(progress)
+    "display(progress)"
    ]
   },
   {
