Fixed sys2 and sys3 not updating
Sys2 and sys3 used for ldos/current maps was not updated together with sys. Some minor text changes for intro page to add the 1st,2nd and 3rd NN TB models.

--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -606,9 +606,13 @@
     "        lattice=str(sites[atom][0])[19] #obtain the sublattice \n",
     "        if lattice=='0':\n",
     "            del sys[a(vec1,vec2)] #delete the atom\n",
+    "            del sys2[a(vec1,vec2)]\n",
+    "            del sys3[a(vec1,vec2)]\n",
     "        else:\n",
-    "            del sys[b(vec1,vec2)]            \n",
-    "    return sys #return the updated system\n"
+    "            del sys[b(vec1,vec2)] \n",
+    "            del sys2[b(vec1,vec2)]\n",
+    "            del sys3[b(vec1,vec2)]\n",
+    "    return sys,sys2,sys3 #return the updated system\n"
    ]
   },
   {
@@ -978,7 +982,7 @@
     "        if ireset!=oldreset:   #If the string to remove atoms is newly submitted, then removes atoms \n",
     "            atoms = map(int, RemAtoms.split(',')) #get a list from a string\n",
     "            atoms=set(atoms) #gets rid of dublicates\n",
-    "            sys=del_atoms(atoms) #return new instance of sys with atoms removed, all other paramaters stay (lead,v1,A,D,W,etc.)\n",
+    "            sys,sys2,sys3=del_atoms(atoms) #return new instance of sys with atoms removed, all other paramaters stay (lead,v1,A,D,W,etc.)\n",
     "            oldreset+=1\n",
     "    if len(RemAtoms)==0:     #If there is no list of atoms to remove then it means we build a new system with new params\n",
     "        sys, sys2, sys3, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, Q, H, L, N = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality, Q=QD, H=Hopping)\n",
@@ -1004,7 +1008,7 @@
     "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another, only available with 180° angle\",min=0,max=5,step=1, value=0),\n",
     "                        QD=widgets.IntSlider(description_tooltip=\"Select the width of the quantum dot in terms of benzene rings, only available with 180° angle\", min=0, max=6, step=1, value=0, description='QD Width'),\n",
     "                        Chirality=widgets.ToggleButtons(description_tooltip=\"For even-numbered widths, select chirality of the lead\",options=[('up',0),('down',1)]),\n",
-    "                        Hopping=widgets.Dropdown(description_tooltip=\"Select the tight-binding model in terms of nearest-neighbours\",options=[('1st',1), ('2nd',2), ('3rd',3)],value=1,disabled=False),\n",
+    "                        Hopping=widgets.Dropdown(description_tooltip=\"Select the tight-binding model in terms of nearest-neighbours\",options=[('1st NN',1), ('2nd NN',2), ('3rd NN',3)],value=1,disabled=False),\n",
     "                        RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
     "\n",
     "Selection.children[7].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
@@ -1092,7 +1096,6 @@
     "#Widget for displaying current, ldos and wavefunction. Two selections - energy (for all) and mode(just for wfn)\n",
     "def single(Energy):\n",
     "    global fsys, fsys_plot\n",
-    "    \n",
     "    fsys=sys2.finalized()\n",
     "    fsys_plot=sys3.finalized()\n",
     "    ldos_and_current(Energy)\n",
@@ -1120,6 +1123,13 @@
    "source": [
     "display(Single_en_at)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
