--- a/TBETA.ipynb
+++ b/TBETA.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the parameters defining the structure of your GNR junction. Some options are only active for specific junction angle or lead width. Additional information on the parameters is displayed *when the cursor is placed over the parameter name*. Atoms can be removed from the initial junction structure by entering their numbers separated by a comma (,) and pressing '*Remove atoms*'. Button '*Reset system*' returns the junction structure to its initial state. Band structure of the selected GNR leads is displayed next to the junction structure. At present, the application allows defining only the junctions with identical armchair GNR leads."
+    "Select the parameters defining the structure of your GNR junction. Some options are only active for specific junction angle or lead width. Additional information on the parameters is displayed *when the cursor is placed over the parameter name*. Atoms can be removed from the initial junction structure by entering their numbers separated by a comma (,) and pressing '*Remove atoms*'. Button '*Reset system*' returns the junction structure to its initial state. Band structure of the selected GNR leads is displayed next to the junction structure. At present, the application allows defining only the junctions with identical armchair-edge GNR leads."
    ]
   },
   {
